<resources>
    <string name="app_name">Trees</string>
    <string name="IntroductionHeader">Introduction</string>
    <string name="TopicButton">Topics</string>
    <string name="MenuBackButton">Back</string>
    <string name="introduction_text">
        "Greetings!\n\n"

        "This is an application developed by Judeicator for a project; this contains information regarding \"Trees\"\n\n"

        "The button below will allow you to choose from various topics which contain… well information about them; just scroll down and choose one that interests you\n\n"

        "Information are mostly (pretty much everything) text so… have fun!"
    </string>
    <string name="action_settings">Settings</string>
    <string name="Menu1">What are Trees?</string>
    <string name="Text1">
        "\t\tAlthough \"tree\" is a term of common parlance, there is no universally recognised precise definition of what a tree is, either botanically or in common language."
        "In its broadest sense, a tree is any plant with the general form of an elongated stem, or trunk, which supports the photosynthetic leaves or branches at some distance above the ground."
        "Trees are also typically defined by height, with smaller plants from 0.5 to 10 m (1.6 to 32.8 ft) being called shrubs, so the minimum height of a tree is only loosely defined. "
        "Large herbaceous plants such as papaya and bananas are trees in this broad sense.\n"

        "\t\tA commonly applied narrower definition is that a tree has a woody trunk formed by secondary growth, meaning that the trunk thickens each year by growing outwards, in addition to the primary upwards growth from the growing tip."
        "Under such a definition, herbaceous plants such as palms, bananas and papayas are not considered trees regardless of their height, growth form or stem girth."
        "Certain monocots may be considered trees under a slightly looser definition; while the Joshua tree, bamboos and palms do not have secondary growth and never produce true wood with growth rings, they may produce \"pseudo-wood\" by lignifying cells formed by primary growth.\n"

        "\t\tAside from structural definitions, trees are commonly defined by use; for instance, as those plants which yield lumber."
    </string>
    <string name="Menu2">Overview</string>
    <string name="Text2">
        "\t\tThe tree growth habit is an evolutionary adaptation found in different groups of plants: by growing taller, trees are able to compete better for sunlight. Trees tend to be tall and long-lived, some reaching several thousand years old. Several trees are among the oldest organisms now living. Trees have modified structures such as thicker stems composed of specialised cells that add structural strength and durability, allowing them to grow taller than many other plants and to spread out their foliage. They differ from shrubs, which have a similar growth form, by usually growing larger and having a single main stem; but there is no consistent distinction between a tree and a shrub, made more confusing by the fact that trees may be reduced in size under harsher environmental conditions such as on mountains and subarctic areas. The tree form has evolved separately in unrelated classes of plants in response to similar environmental challenges, making it a classic example of parallel evolution. With an estimated 60,000-100,000 species, the number of trees worldwide might total twenty-five per cent of all living plant species. The greatest number of these grow in tropical regions and many of these areas have not yet been fully surveyed by botanists, making tree diversity and ranges poorly known.\n"

        "\t\tThe tree growth habit is an evolutionary adaptation found in different groups of plants: by growing taller, trees are able to compete better for sunlight. Trees tend to be tall and long-lived, some reaching several thousand years old. Several trees are among the oldest organisms now living. Trees have modified structures such as thicker stems composed of specialised cells that add structural strength and durability, allowing them to grow taller than many other plants and to spread out their foliage. They differ from shrubs, which have a similar growth form, by usually growing larger and having a single main stem; but there is no consistent distinction between a tree and a shrub, made more confusing by the fact that trees may be reduced in size under harsher environmental conditions such as on mountains and subarctic areas. The tree form has evolved separately in unrelated classes of plants in response to similar environmental challenges, making it a classic example of parallel evolution. With an estimated 60,000-100,000 species, the number of trees worldwide might total twenty-five per cent of all living plant species. The greatest number of these grow in tropical regions and many of these areas have not yet been fully surveyed by botanists, making tree diversity and ranges poorly known.\n"

        "\t\tWood gives structural strength to the trunk of most types of tree; this supports the plant as it grows larger. The vascular system of trees allows water, nutrients and other chemicals to be distributed around the plant, and without it trees would not be able to grow as large as they do. Trees, as relatively tall plants, need to draw water up the stem through the xylem from the roots by the suction produced as water evaporates from the leaves. If insufficient water is available the leaves will die. The three main parts of trees include the root, stem, and leaves; they are integral parts of the vascular system which interconnects all the living cells. In trees and other plants that develop wood, the vascular cambium allows the expansion of vascular tissue that produces woody growth. Because this growth ruptures the epidermis of the stem, woody plants also have a cork cambium that develops among the phloem. The cork cambium gives rise to thickened cork cells to protect the surface of the plant and reduce water loss. Both the production of wood and the production of cork are forms of secondary growth.\n"

        "\t\tTrees are either evergreen, having foliage that persists and remains green throughout the year, or deciduous, shedding their leaves at the end of the growing season and then having a dormant period without foliage. Most conifers are evergreens, but larches (Larix and Pseudolarix) are deciduous, dropping their needles each autumn, and some species of cypress (Glyptostrobus, Metasequoia and Taxodium) shed small leafy shoots annually in a process known as cladoptosis. The crown is a name for the spreading top of a tree including the branches and leaves, while the uppermost layer in a forest, formed by the crowns of the trees, is known as the canopy. A sapling is a young tree.\n"

        "\t\tMany tall palms are herbaceous monocots; these do not undergo secondary growth and never produce wood. In many tall palms, the terminal bud on the main stem is the only one to develop, so they have unbranched trunks with large spirally arranged leaves. Some of the tree ferns, order Cyatheales, have tall straight trunks, growing up to 20 metres (66 ft), but these are composed not of wood but of rhizomes which grow vertically and are covered by numerous adventitious roots.\n"

    </string>
    <string name="Menu3">Distribution</string>
    <string name="Text3">
        "\t\tThe number of trees in the world, according to a 2015 estimate, is 3.04 trillion, of which 1.39 trillion (46%) are in the tropics or sub-tropics, 0.61 trillion (20%) in the temperate zones, and 0.74 trillion (24%) in the coniferous boreal forests. The estimate is about eight times higher than previous estimates, and is based on tree densities measured on over 400,000 plots. It remains subject to a wide margin of error, not least because the samples are mainly from Europe and North America. The estimate suggests that about 15 billion trees are cut down annually and about 5 billion are planted. In the 12,000 years since the start of human agriculture, the number of trees worldwide has decreased by 46%. \n"

        "\t\tIn suitable environments, such as the Daintree Rainforest in Queensland, or the mixed podocarp and broadleaf forest of Ulva Island, New Zealand, forest is the more-or-less stable climatic climax community at the end of a plant succession, where open areas such as grassland are colonised by taller plants, which in turn give way to trees that eventually form a forest canopy. \n"

        "\t\tIn cool temperate regions, conifers often predominate; a widely distributed climax community in the far north of the northern hemisphere is moist taiga or northern coniferous forest (also called boreal forest). Taiga is the world's largest land biome, forming 29% of the world's forest cover. The long cold winter of the far north is unsuitable for plant growth and trees must grow rapidly in the short summer season when the temperature rises and the days are long. Light is very limited under their dense cover and there may be little plant life on the forest floor, although fungi may abound. Similar woodland is found on mountains where the altitude causes the average temperature to be lower thus reducing the length of the growing season. \n"

        "\t\tWhere rainfall is relatively evenly spread across the seasons in temperate regions, temperate broadleaf and mixed forest typified by species like oak, beech, birch and maple is found. Temperate forest is also found in the southern hemisphere, as for example in the Eastern Australia temperate forest, characterised by Eucalyptus forest and open acacia woodland. \n"

        "\t\tIn tropical regions with a monsoon or monsoon-like climate, where a drier part of the year alternates with a wet period as in the Amazon rainforest, different species of broad-leaved trees dominate the forest, some of them being deciduous. In tropical regions with a drier savanna climate and insufficient rainfall to support dense forests, the canopy is not closed, and plenty of sunshine reaches the ground which is covered with grass and scrub. Acacia and baobab are well adapted to living in such areas. \n"
    </string>
    <string name="Menu4">Roots</string>
    <string name="Menu5">Trunk</string>
</resources>