<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".MenuActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Menu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:onClick="Trees"
                android:text="@string/Menu1"
                android:visibility="visible"
                tools:layout_editor_absoluteY="111dp" />

            <Button
                android:id="@+id/Menu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:onClick="Trees"
                android:text="@string/Menu2"
                tools:layout_editor_absoluteY="160dp" />

            <Button
                android:id="@+id/Menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:onClick="Trees"
                android:text="@string/Menu3"
                tools:layout_editor_absoluteY="209dp" />

            <Button
                android:id="@+id/Menu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:onClick="Trees"
                android:text="@string/Menu4"
                tools:layout_editor_absoluteY="258dp" />

            <Button
                android:id="@+id/Menu5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:onClick="Trees"
                android:text="@string/Menu5" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/ButtonColor"
        android:onClick="Back"
        android:text="@string/MenuBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>